--- a/dataset/ProjectSink1.json
+++ b/dataset/ProjectSink1.json
@@ -1,5 +1,5 @@
 {
-	"name": "Parquet1",
+	"name": "ProjectSink1",
 	"properties": {
 		"linkedServiceName": {
 			"referenceName": "linkedserviceDL1",
