--- a/pipeline/Project1.json
+++ b/pipeline/Project1.json
@@ -60,7 +60,7 @@
 				],
 				"outputs": [
 					{
-						"referenceName": "Parquet1",
+						"referenceName": "ProjectSink1",
 						"type": "DatasetReference"
 					}
 				]
