--- a/pipeline/Project1.json
+++ b/pipeline/Project1.json
@@ -158,7 +158,7 @@
 						{
 							"type": "Query",
 							"text": {
-								"value": "select max(@{pipeline().parameters.cdc_column} as cdc\nfrom  @{pipeline().parameters.schema}.@{pipeline().parameters.table}",
+								"value": "select max(@{pipeline().parameters.cdc_column}) as cdc\nfrom  @{pipeline().parameters.schema}.@{pipeline().parameters.table}",
 								"type": "Expression"
 							}
 						}
